--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </div>
     <div id="main">
         <div id="sidebar">
-            <button id="play">play simulation</button>
+            <button id="play">play</button>
+            <button id="reset">reset</button>
             <div id="electron-boxes">
 
             </div>
